Classroom scene crash when switching to Compositor Editor - 2.93 beta #87989

Closed
opened 2021-05-02 15:03:39 +02:00 by YAFU · 6 comments

System Information
Operating system: Linux-5.4.0-72-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.73.01

Blender Version
Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-05-01 15:22, hash: 7c5e009655
Caused by 0d5cef9898

Exact steps for others to reproduce the error
Open Classroom sample scene for 2.8+, in some editor change to Compositor Editor. Blender crash.

classroom.crash.txt

**System Information** Operating system: Linux-5.4.0-72-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.73.01 **Blender Version** Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-05-01 15:22, hash: `7c5e009655` Caused by 0d5cef9898 **Exact steps for others to reproduce the error** Open Classroom sample scene for 2.8+, in some editor change to Compositor Editor. Blender crash. [classroom.crash.txt](https://archive.blender.org/developer/F10049860/classroom.crash.txt)
Author

Added subscriber: @YAFU

Added subscriber: @YAFU
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, caused by 0d5cef9898.

1  ??                                                                                               0x7fffa72316e8 
2  ??                                                                                               0x7fffa70671ea 
3  ??                                                                                               0x7fffa7235c20 
4  ??                                                                                               0x7fffa72369f0 
5  ??                                                                                               0x7fffa6ff84b8 
6  ??                                                                                               0x7fffa6ffa0ed 
7  ??                                                                                               0x7fffa7247c6a 
8  ??                                                                                               0x7fffa6ffe04e 
9  ??                                                                                               0x7fffa6ffe226 
10 blender::compositor::OpenCLDevice::COM_clEnqueueRange          COM_OpenCLDevice.cc           245 0x45df025      
11 blender::compositor::GaussianXBlurOperation::executeOpenCL     COM_GaussianXBlurOperation.cc 154 0x4609e9d      
12 blender::compositor::WriteBufferOperation::executeOpenCLRegion COM_WriteBufferOperation.cc   152 0x45d28f8      
13 blender::compositor::OpenCLDevice::execute                     COM_OpenCLDevice.cc           68  0x45dea05      
14 blender::compositor::thread_execute_gpu                        COM_WorkScheduler.cc          121 0x45cde89      
15 tslot_thread_start                                             threads.cc                    231 0xfe66ca9      
16 start_thread                                                                                     0x7ffff7f693f9 
17 clone
```                                                                                            0x7ffff7887b53 
Can confirm, caused by 0d5cef9898. ``` 1 ?? 0x7fffa72316e8 2 ?? 0x7fffa70671ea 3 ?? 0x7fffa7235c20 4 ?? 0x7fffa72369f0 5 ?? 0x7fffa6ff84b8 6 ?? 0x7fffa6ffa0ed 7 ?? 0x7fffa7247c6a 8 ?? 0x7fffa6ffe04e 9 ?? 0x7fffa6ffe226 10 blender::compositor::OpenCLDevice::COM_clEnqueueRange COM_OpenCLDevice.cc 245 0x45df025 11 blender::compositor::GaussianXBlurOperation::executeOpenCL COM_GaussianXBlurOperation.cc 154 0x4609e9d 12 blender::compositor::WriteBufferOperation::executeOpenCLRegion COM_WriteBufferOperation.cc 152 0x45d28f8 13 blender::compositor::OpenCLDevice::execute COM_OpenCLDevice.cc 68 0x45dea05 14 blender::compositor::thread_execute_gpu COM_WorkScheduler.cc 121 0x45cde89 15 tslot_thread_start threads.cc 231 0xfe66ca9 16 start_thread 0x7ffff7f693f9 17 clone ``` 0x7ffff7887b53

This issue was referenced by 1b4f0bf32a

This issue was referenced by 1b4f0bf32aa5215325ca33f81898a7eeef9da2f8

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sergey Sharybin self-assigned this 2021-05-03 15:11:25 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87989
No description provided.